[package]
name = "ace-oscore-helpers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dcaf = { version = "^0.3", default-features = false }
coset = { version = "^0.3", default-features = false }

# for aesccm.rs:
aes = "0.8"
ccm = { version = "^0.5", default-features = false }
aead = { version = "^0.5", features = [ "alloc" ] }

hex-literal = "0.3"
# whatever coset/dcaf use, we only mention it once and hope for the best w/o them re-exporting it
ciborium = { version = "*", default-features = false }

[patch.crates-io]
coset = { git = "https://github.com/chrysn-pull-requests/coset", branch = "oscore" }
dcaf = { git = "https://github.com/chrysn-pull-requests/dcaf-rs", branch = "oscore" }
