# SPDX-FileCopyrightText: Copyright 2022 EDF (Électricité de France S.A.)
# SPDX-License-Identifier: BSD-3-Clause
# See README for all details on copyright, authorship and license.

[package]
name = "ace-oscore-helpers"
version = "0.1.0"
edition = "2021"
authors = [ "Christian Amsüss" ]
license = "BSD-3-Clause"

repository = "https://gitlab.com/oscore/ace-oscore-helpers"
docs = "https://docs.rs/crate/ace-oscore-helpers/latest"

[dependencies]
rand_core = "0.6"
dcaf = { version = "^0.3", default-features = false }
coset = { version = "^0.3", default-features = false }
# to pick data out of them
ciborium = { version = "0.2.0", default-features = false }

uluru = "3.0.0"
coap-handler = "0.1.4"
coap-message = "0.2.3"
coap-numbers = "0.2.0"
coap-handler-implementations = { version = "0.3.5", features = [ "ciborium-io" ] }
# We could use higher-level ciborium (given whatever fixes dcaf's/coset's
# dependency on its alloc will fix it here too), but given that its serde based
# high-level deserializer won't use numeric map keys, we need to go on foot
# anyway.
ciborium-ll = "0.2.0"
ciborium-io = { version = "0.2.0", default-features = false }

# for aesccm.rs:
aes = "0.8"
ccm = { version = "^0.5", default-features = false }
aead = { version = "^0.5", features = [ "alloc" ] }

hex-literal = "0.3"
heapless = { version = "0.7.16", features = [ "defmt-impl" ] }

liboscore = { version = "0.1.0", optional = true }

# just to derive the right things
defmt = "0.3"

# for demo_rs

embedded-nal-minimal-coapserver = { version = "^0.3", optional = true }
embedded-nal = { version = "^0.6", optional = true }
std-embedded-nal = { version = "^0.1.2", optional = true }
rand = { version = "0.8.5", optional = true }

[dev-dependencies]
# for tests
coap-message = { version = "0.2.3", features = [ "alloc" ] }

[features]
example-demo_rs = [ "embedded-nal-minimal-coapserver", "embedded-nal", "std-embedded-nal", "liboscore" ]
alloc = []

[[example]]
name = "demo_rs"
required-features = [ "example-demo_rs" ]

[patch.crates-io]
coset = { git = "https://github.com/chrysn-pull-requests/coset", branch = "oscore" }
dcaf = { git = "https://github.com/chrysn-pull-requests/dcaf-rs", branch = "oscore" }
